project/logs/20250521_152013.log
Hello,DirectX!

clientSize:1280,720

Use Adapater:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader,path:Object3D.PS.hlsl,prefile:vs_6_0

Object3D.PS.hlsl:6:1: error: Semantic SV_TARGET is invalid for shader model: vs
PixelShaderOutput main()
^

